--- a/mustang/index.html
+++ b/mustang/index.html
@@ -62,63 +62,63 @@
     </tr>
     <tr>
       <td>Ford 1970 Car Shop Manual Volume 2 Engine</td>
-      <td><a href="/1970-ford-car-shop-manual-volume-2/">HTML</a></td>
-      <td><a href="/1970-ford-car-shop-manual-volume-2-ebook.pdf">PDF ebook</a></td>
-      <td><a href="/1970-ford-car-shop-manual-volume-2-print.pdf">PDF print</a></td>
+      <td><a href="1970-ford-car-shop-manual-volume-2/">HTML</a></td>
+      <td><a href="1970-ford-car-shop-manual-volume-2-ebook.pdf">PDF ebook</a></td>
+      <td><a href="1970-ford-car-shop-manual-volume-2-print.pdf">PDF print</a></td>
     </tr>
     <tr>
       <td>Ford 1970 Car Shop Manual Volume 2 Engine - Part 21-01 General Engine Service</td>
-      <td><a href="/1970-ford-car-shop-manual-volume-2-part-21-01-general-engine-service/">HTML</a></td>
-      <td><a href="/1970-ford-car-shop-manual-volume-2-part-21-01-general-engine-service-ebook.pdf">PDF ebook</a></td>
-      <td><a href="/1970-ford-car-shop-manual-volume-2-part-21-01-general-engine-service-print.pdf">PDF print</a></td>
+      <td><a href="1970-ford-car-shop-manual-volume-2-part-21-01-general-engine-service/">HTML</a></td>
+      <td><a href="1970-ford-car-shop-manual-volume-2-part-21-01-general-engine-service-ebook.pdf">PDF ebook</a></td>
+      <td><a href="1970-ford-car-shop-manual-volume-2-part-21-01-general-engine-service-print.pdf">PDF print</a></td>
     </tr>
     <tr>
       <td>Ford 1970 Car Shop Manual Volume 2 Engine - Part 21-06 390 and 428 V8 Engines</td>
-      <td><a href="/1970-ford-car-shop-manual-volume-2-part-21-06-390-and-428-v8-engines/">HTML</a></td>
-      <td><a href="/1970-ford-car-shop-manual-volume-2-part-21-06-390-and-428-v8-engines-ebook.pdf">PDF ebook</a></td>
-      <td><a href="/1970-ford-car-shop-manual-volume-2-part-21-06-390-and-428-v8-engines-print.pdf">PDF print</a></td>
+      <td><a href="1970-ford-car-shop-manual-volume-2-part-21-06-390-and-428-v8-engines/">HTML</a></td>
+      <td><a href="1970-ford-car-shop-manual-volume-2-part-21-06-390-and-428-v8-engines-ebook.pdf">PDF ebook</a></td>
+      <td><a href="1970-ford-car-shop-manual-volume-2-part-21-06-390-and-428-v8-engines-print.pdf">PDF print</a></td>
     </tr>
     <tr>
       <td>Ford 1970 Car Shop Manual Volume 2 Engine - Part 24 Cooling System</td>
-      <td><a href="/1970-ford-car-shop-manual-volume-2-part-24-cooling-system/">HTML</a></td>
-      <td><a href="/1970-ford-car-shop-manual-volume-2-part-24-cooling-system-ebook.pdf">PDF ebook</a></td>
-      <td><a href="/1970-ford-car-shop-manual-volume-2-part-24-cooling-system-print.pdf">PDF print</a></td>
+      <td><a href="1970-ford-car-shop-manual-volume-2-part-24-cooling-system/">HTML</a></td>
+      <td><a href="1970-ford-car-shop-manual-volume-2-part-24-cooling-system-ebook.pdf">PDF ebook</a></td>
+      <td><a href="1970-ford-car-shop-manual-volume-2-part-24-cooling-system-print.pdf">PDF print</a></td>
     </tr>
     <tr>
       <td>Ford 1970 Car Shop Manual Volume 3 Electrical</td>
-      <td><a href="/1970-ford-car-shop-manual-volume-3/">HTML</a></td>
-      <td><a href="/1970-ford-car-shop-manual-volume-3-ebook.pdf">PDF ebook</a></td>
-      <td><a href="/1970-ford-car-shop-manual-volume-3-print.pdf">PDF print</a></td>
+      <td><a href="1970-ford-car-shop-manual-volume-3/">HTML</a></td>
+      <td><a href="1970-ford-car-shop-manual-volume-3-ebook.pdf">PDF ebook</a></td>
+      <td><a href="1970-ford-car-shop-manual-volume-3-print.pdf">PDF print</a></td>
     </tr>
     <tr>
       <td>Ford 1970 Car Shop Manual Volume 3 Electrical - Part 33-03 Instruments, Clusters & Controls</td>
-      <td><a href="/1970-ford-car-shop-manual-volume-3-part-33-03-instruments-clusters-and-controls/">HTML</a></td>
-      <td><a href="/1970-ford-car-shop-manual-volume-3-part-33-03-instruments-clusters-and-controls.pdf">PDF ebook</a></td>
-      <td><a href="/1970-ford-car-shop-manual-volume-3-part-33-03-instruments-clusters-and-controls.pdf">PDF print</a></td>
+      <td><a href="1970-ford-car-shop-manual-volume-3-part-33-03-instruments-clusters-and-controls/">HTML</a></td>
+      <td><a href="1970-ford-car-shop-manual-volume-3-part-33-03-instruments-clusters-and-controls.pdf">PDF ebook</a></td>
+      <td><a href="1970-ford-car-shop-manual-volume-3-part-33-03-instruments-clusters-and-controls.pdf">PDF print</a></td>
     </tr>
     <tr>
       <td>Ford 1970 Car Shop Manual Volume 4 Body</td>
-      <td><a href="/1970-ford-car-shop-manual-volume-4/">HTML</a></td>
-      <td><a href="/1970-ford-car-shop-manual-volume-4-ebook.pdf">PDF ebook</a></td>
-      <td><a href="/1970-ford-car-shop-manual-volume-4-print.pdf">PDF print</a></td>
+      <td><a href="1970-ford-car-shop-manual-volume-4/">HTML</a></td>
+      <td><a href="1970-ford-car-shop-manual-volume-4-ebook.pdf">PDF ebook</a></td>
+      <td><a href="1970-ford-car-shop-manual-volume-4-print.pdf">PDF print</a></td>
     </tr>
     <tr>
       <td>Ford 1970 Car Shop Manual Volume 5 Maintenance</td>
-      <td><a href="/1970-ford-car-shop-manual-volume-5/">HTML</a></td>
-      <td><a href="/1970-ford-car-shop-manual-volume-4-ebook.pdf">PDF ebook</a></td>
-      <td><a href="/1970-ford-car-shop-manual-volume-4-print.pdf">PDF print</a></td>
+      <td><a href="1970-ford-car-shop-manual-volume-5/">HTML</a></td>
+      <td><a href="1970-ford-car-shop-manual-volume-4-ebook.pdf">PDF ebook</a></td>
+      <td><a href="1970-ford-car-shop-manual-volume-4-print.pdf">PDF print</a></td>
     </tr>
     <tr>
       <td>Ford 1970 Mustang Wiring and Vacuum Diagrams</td>
-      <td><a href="/1970-ford-mustang-wiring-diagrams/">HTML</a></td>
-      <td><a href="/1970-ford-mustang-wiring-diagrams-ebook.pdf">PDF ebook</a></td>
-      <td><a href="/1970-ford-mustang-wiring-diagrams-print.pdf">PDF print</a></td>
+      <td><a href="1970-ford-mustang-wiring-diagrams/">HTML</a></td>
+      <td><a href="1970-ford-mustang-wiring-diagrams-ebook.pdf">PDF ebook</a></td>
+      <td><a href="1970-ford-mustang-wiring-diagrams-print.pdf">PDF print</a></td>
     </tr>
     <tr>
       <td>Ford 1970 Mustang Ads</td>
-      <td><a href="/1970-ford-mustang-ads/">HTML</a></td>
-      <td><a href="/1970-ford-mustang-ads-ebook.pdf">PDF ebook</a></td>
-      <td><a href="/1970-ford-mustang-ads-print.pdf">PDF print</a></td>
+      <td><a href="1970-ford-mustang-ads/">HTML</a></td>
+      <td><a href="1970-ford-mustang-ads-ebook.pdf">PDF ebook</a></td>
+      <td><a href="1970-ford-mustang-ads-print.pdf">PDF print</a></td>
     </tr>
   </table>
 </body>
