--- a/mustang/index.html
+++ b/mustang/index.html
@@ -56,47 +56,47 @@
   <table>
     <tr>
       <td>Ford 1970 Car Shop Manual Volume 1 Chassis</td>
-      <td><a href="1970-ford-car-shop-manual-volume-1/">View</a></td>
+      <td><a href="1970-ford-car-shop-manual-volume-1/" target="_blank">View</a></td>
     </tr>
     <tr>
       <td>Ford 1970 Car Shop Manual Volume 2 Engine</td>
-      <td><a href="1970-ford-car-shop-manual-volume-2/">View</a></td>
+      <td><a href="1970-ford-car-shop-manual-volume-2/" target="_blank">View</a></td>
     </tr>
     <tr>
       <td>Ford 1970 Car Shop Manual Volume 2 Engine - Part 21-01 General Engine Service</td>
-      <td><a href="1970-ford-car-shop-manual-volume-2-part-21-01-general-engine-service/">View</a></td>
+      <td><a href="1970-ford-car-shop-manual-volume-2-part-21-01-general-engine-service/" target="_blank">View</a></td>
     </tr>
     <tr>
       <td>Ford 1970 Car Shop Manual Volume 2 Engine - Part 21-06 390 and 428 V8 Engines</td>
-      <td><a href="1970-ford-car-shop-manual-volume-2-part-21-06-390-and-428-v8-engines/">View</a></td>
+      <td><a href="1970-ford-car-shop-manual-volume-2-part-21-06-390-and-428-v8-engines/" target="_blank">View</a></td>
     </tr>
     <tr>
       <td>Ford 1970 Car Shop Manual Volume 2 Engine - Part 24 Cooling System</td>
-      <td><a href="1970-ford-car-shop-manual-volume-2-part-24-cooling-system/">View</a></td>
+      <td><a href="1970-ford-car-shop-manual-volume-2-part-24-cooling-system/" target="_blank">View</a></td>
     </tr>
     <tr>
       <td>Ford 1970 Car Shop Manual Volume 3 Electrical</td>
-      <td><a href="1970-ford-car-shop-manual-volume-3/">View</a></td>
+      <td><a href="1970-ford-car-shop-manual-volume-3/" target="_blank">View</a></td>
     </tr>
     <tr>
       <td>Ford 1970 Car Shop Manual Volume 3 Electrical - Part 33-03 Instruments, Clusters & Controls</td>
-      <td><a href="1970-ford-car-shop-manual-volume-3-part-33-03-instruments-clusters-and-controls/">View</a></td>
+      <td><a href="1970-ford-car-shop-manual-volume-3-part-33-03-instruments-clusters-and-controls/" target="_blank">View</a></td>
     </tr>
     <tr>
       <td>Ford 1970 Car Shop Manual Volume 4 Body</td>
-      <td><a href="1970-ford-car-shop-manual-volume-4/">View</a></td>
+      <td><a href="1970-ford-car-shop-manual-volume-4/" target="_blank">View</a></td>
     </tr>
     <tr>
       <td>Ford 1970 Car Shop Manual Volume 5 Maintenance</td>
-      <td><a href="1970-ford-car-shop-manual-volume-5/">View</a></td>
+      <td><a href="1970-ford-car-shop-manual-volume-5/" target="_blank">View</a></td>
     </tr>
     <tr>
       <td>Ford 1970 Mustang Wiring and Vacuum Diagrams</td>
-      <td><a href="1970-ford-mustang-wiring-diagrams/">View</a></td>
+      <td><a href="1970-ford-mustang-wiring-diagrams/" target="_blank">View</a></td>
     </tr>
     <tr>
       <td>Ford 1970 Mustang Ads</td>
-      <td><a href="1970-ford-mustang-ads/">View</a></td>
+      <td><a href="1970-ford-mustang-ads/" target="_blank">View</a></td>
     </tr>
   </table>
 </body>
