--- a/notations/index.html
+++ b/notations/index.html
@@ -1557,7 +1557,7 @@ function deleteNotation(id) {
       break;
     }
   }
-  $("header nav ul li a[href~='/?t=" + t + "']").addClass("selected");
+  $("header nav ul li a[href~='?t=" + t + "']").addClass("selected");
 
   //Prepare filtering functionality for insta-filter.
   function filter(query) {
