--- a/notations/config/index.html
+++ b/notations/config/index.html
@@ -165,19 +165,19 @@ class Notation {
   }
 
   get uri() {
-    return '/details/?id=' + this.id;
+    return './details/?id=' + this.id;
   }
 
   get pinUri() {
-    return '/?pin=' + this.id;
+    return './?pin=' + this.id;
   }
 
   get unpinUri() {
-    return '/?unpin=' + this.id;
+    return './?unpin=' + this.id;
   }
 
   get removeUri() {
-    return '/?remove=' + this.id;
+    return './?remove=' + this.id;
   }
 
   get googleUri() {
