--- a/notations/find/index.html
+++ b/notations/find/index.html
@@ -209,15 +209,15 @@ class Notation {
   }
 
   get pinUri() {
-    return './?pin=' + this.id;
+    return '../?pin=' + this.id;
   }
 
   get unpinUri() {
-    return './?unpin=' + this.id;
+    return '../?unpin=' + this.id;
   }
 
   get removeUri() {
-    return './?remove=' + this.id;
+    return '../?remove=' + this.id;
   }
 
   get googleUri() {
