--- a/notations/details/index.html
+++ b/notations/details/index.html
@@ -14,7 +14,7 @@
 
   <header>
   <hgroup>
-    <h1><a href=".">Notations</a> &#187; <a href=""></a></h1>
+    <h1><a href="..">Notations</a> &#187; <a href=""></a></h1>
   </hgroup>
 
   <nav>
