--- a/notations/details/index.html
+++ b/notations/details/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Notations">
     <link rel="canonical" href="http://notations.incognitek.com/details/">
-    <style type="text/css">@font-face{font-family:'Dosis';font-style:normal;font-weight:300;src:local("Dosis Light"),local("Dosis-Light"),url(./font/dosis-light.woff2) format("woff2"),url(../font/dosis-light.woff2) format("woff2")}*{box-sizing:border-box;float:inherit;clear:inherit;font-family:"Dosis", sans-serif;font-size:1rem;font-weight:300;text-transform:lowercase;line-height:inherit;padding:0;margin:0;border:none;outline:none;color:#036;background-color:transparent;transition:all 0.0625s ease}body{background-color:#f3f3f3}img{text-indent:-9999px;width:100%}a{text-decoration:none;color:#036}a:hover{text-decoration:underline}a:hover img{-webkit-filter:hue-rotate(-10deg) contrast(110%)}input{border:1px solid #ddd;background-color:white}ul{float:left;clear:none;list-style:none}ul li a{padding:0 1rem}ul li .selected{color:#09f}ul li form{display:block;width:22rem;padding-right:1rem;padding-bottom:1rem}@media (max-width: 850px){ul li form{padding-left:1rem}}ul li form input[type=text]{width:100%;line-height:2rem;margin-top:1rem;padding:0 3%}@media (max-width: 690px){ul li:nth-child(2){clear:left}}header{float:left;clear:both;width:100%;line-height:4rem;background-color:#f3f3f3;border-bottom:1px solid #ddd}header hgroup{clear:none;padding-left:1rem}header hgroup *{float:none}header nav{float:right;clear:none}@media (max-width: 770px){header nav{float:left;clear:both}}footer{float:left;clear:both;width:100%;line-height:4rem;background-color:#f3f3f3;border-top:1px solid #ddd}.calc{float:left;clear:none;width:100%;background-color:white;padding:1rem 1rem 0 1rem}.calc *{float:none;clear:none}.calc input{text-align:center;width:4rem;border:1px solid #ddd;border-radius:2px}.calc input:read-only{background-color:#f3f3f3}#flex{float:left;clear:both;width:100%;background-color:white;display:flex;flex-wrap:wrap;justify-content:space-between;padding-bottom:2rem}#flex:after{content:"";flex:auto}section{flex-grow:0;flex-shrink:0;flex-basis:20%;overflow:hidden;padding:1rem 1rem 0 1rem}section h1{display:inline;line-height:1.5rem}section span{display:inline;font-size:.5rem}section img{margin-top:.25rem}.notation{flex-basis:calc(100% / 5)}@media (max-width: 1750px){.notation{flex-basis:calc(100% / 4)}}@media (max-width: 1500px){.notation{flex-basis:calc(100% / 3)}}@media (max-width: 1250px){.notation{flex-basis:calc(100% / 3)}}@media (max-width: 1000px){.notation{flex-basis:calc(100% / 2)}}@media (max-width: 750px){.notation{flex-basis:calc(100% / 2)}}@media (max-width: 500px){.notation{flex-basis:calc(100% / 1)}}@media (max-width: 250px){.notation{flex-basis:calc(100% / 1)}}.highlighted h1:before{content:'* '}.timespan{flex-basis:calc(100% / 3)}@media (max-width: 1750px){.timespan{flex-basis:calc(100% / 3)}}@media (max-width: 1500px){.timespan{flex-basis:calc(100% / 3)}}@media (max-width: 1250px){.timespan{flex-basis:calc(100% / 3)}}@media (max-width: 1000px){.timespan{flex-basis:calc(100% / 2)}}@media (max-width: 750px){.timespan{flex-basis:calc(100% / 2)}}@media (max-width: 500px){.timespan{flex-basis:calc(100% / 1)}}@media (max-width: 250px){.timespan{flex-basis:calc(100% / 1)}}
+    <style type="text/css">@font-face{font-family:'Dosis';font-style:normal;font-weight:300;src:local("Dosis Light"),local("Dosis-Light"),url(./font/dosis-light.woff2) format("woff2"),url(../font/dosis-light.woff2) format("woff2")}*{box-sizing:border-box;float:inherit;clear:inherit;font-family:"Dosis", sans-serif;font-size:1rem;font-weight:300;text-transform:lowercase;line-height:inherit;padding:0;margin:0;border:none;outline:none;color:#036;background-color:transparent;transition:all 0.0625s ease}body{background-color:#f3f3f3}img{text-indent:-9999px;width:100%}a{text-decoration:none;color:#036}a:hover{text-decoration:underline}a:hover img{-webkit-filter:hue-rotate(-10deg) contrast(110%)}input{border:1px solid #ddd;background-color:white}ul{float:left;clear:none;list-style:none}ul li a{padding:0 1rem}ul li .selected{color:#09f}ul li form{display:block;width:22rem;padding-right:1rem;padding-bottom:1rem}@media (max-width: 850px){ul li form{padding-left:1rem}}ul li form input[type=text]{width:100%;line-height:2rem;margin-top:1rem;padding:0 3%}@media (max-width: 690px){ul li:nth-child(2){clear:left}}header{float:left;clear:both;width:100%;line-height:4rem;background-color:#f3f3f3;border-bottom:1px solid #ddd}header hgroup{clear:none;padding-left:1rem}header hgroup *{float:none}header nav{float:right;clear:none}@media (max-width: 770px){header nav{float:left;clear:both}}footer{float:left;clear:both;width:100%;line-height:4rem;background-color:#f3f3f3;border-top:1px solid #ddd}.calc{float:left;clear:none;width:100%;background-color:white;padding:1rem 1rem 0 1rem}.calc *{float:none;clear:none}.calc input{text-align:center;width:4rem;border:1px solid #ddd;border-radius:2px}.calc input:read-only{background-color:#f3f3f3}#flex{float:left;clear:both;width:100%;background-color:white;display:flex;flex-wrap:wrap;justify-content:space-between;padding-bottom:2rem}#flex:after{content:"";flex:auto}section{flex-grow:0;flex-shrink:0;flex-basis:20%;overflow:hidden;padding:1rem 1rem 0 1rem}section h1{display:inline;line-height:1.5rem}section span{display:inline;font-size:.5rem}section img{margin-top:.25rem}.notation{flex-basis:calc(100% / 5)}@media (max-width: 1750px){.notation{flex-basis:calc(100% / 4)}}@media (max-width: 1500px){.notation{flex-basis:calc(100% / 3)}}@media (max-width: 1250px){.notation{flex-basis:calc(100% / 3)}}@media (max-width: 1000px){.notation{flex-basis:calc(100% / 2)}}@media (max-width: 750px){.notation{flex-basis:calc(100% / 2)}}@media (max-width: 500px){.notation{flex-basis:calc(100% / 1)}}@media (max-width: 250px){.notation{flex-basis:calc(100% / 1)}}.highlighted h1:before{content:'* '}.timespan{flex-basis:calc(100% / 3)}@media (max-width: 1750px){.timespan{flex-basis:calc(100% / 3)}}@media (max-width: 1500px){.timespan{flex-basis:calc(100% / 3)}}@media (max-width: 1250px){.timespan{flex-basis:calc(100% / 3)}}@media (max-width: 1000px){.timespan{flex-basis:calc(100% / 2)}}@media (max-width: 750px){.timespan{flex-basis:calc(100% / 2)}}@media (max-width: 500px){.timespan{flex-basis:calc(100% / 1)}}@media (max-width: 250px){.timespan{flex-basis:calc(100% / 1)}}.timespan div{text-align:center;padding-top:1rem}.timespan div a{padding:0 1rem}
 </style>
   </head>
 <body>
@@ -26,47 +26,50 @@
 <div class="calc">
   <form>
     Buy
-    <input id="count" type="text" value="" readonly/>
+    <input id="count" type="text" value="" readonly />
     units at
-    <input id="buyAt" type="text" value="" readonly/>
+    <input id="buyAt" type="text" value="" readonly />
     and sell at
-    <input id="sellAt" type="text" value="123.4" autofocus/>
+    <input id="sellAt" type="text" value="123.4" autofocus />
     to invest
-    <input id="amount" type="text" value="4000"/>
+    <input id="amount" type="text" value="4000" />
     and earn
-    <input id="interest" type="text" value="25"/>
-    % at a profit of 
-    <input id="interestAbs" type="text" value="1000" readonly/>
+    <input id="interest" type="text" value="25" />
+    % at a profit of
+    <input id="interestAbs" type="text" value="1000" readonly />
     .
   </form>
 </div>
 
 <div id="flex">
   
-    <section class="timespan">
+  <section class="timespan">
   <a href="#" target="_blank">
     <h1>&nbsp;</h1>
     <span>&nbsp;</span>
     <img src="/img/spacer.gif" alt=""/>
   </a>
+  <div></div>
 </section>
 
   
-    <section class="timespan">
+  <section class="timespan">
   <a href="#" target="_blank">
     <h1>&nbsp;</h1>
     <span>&nbsp;</span>
     <img src="/img/spacer.gif" alt=""/>
   </a>
+  <div></div>
 </section>
 
   
-    <section class="timespan">
+  <section class="timespan">
   <a href="#" target="_blank">
     <h1>&nbsp;</h1>
     <span>&nbsp;</span>
     <img src="/img/spacer.gif" alt=""/>
   </a>
+  <div></div>
 </section>
 
   
@@ -254,22 +257,37 @@ class Notation {
     return 'https://www.google.com/finance?q=' + this.id;
   }
 
-  get finvizUri() {
-    return "https://finviz.com/quote.ashx?t=" + this.symbol;
+  getFinvizUri(timeSpan) {
+    let p = "m";
+    if (timeSpan.id === "5M") {
+      p = "d";
+    } else if (timeSpan.id === "2Y") {
+      p = "w";
+    }
+
+    return "https://finviz.com/quote.ashx?t=" + this.symbol + "&ty=c&ta=0&p=" + p;
   }
 
   get aktienPortalUri() {
     return "https://aktien-portal.at/Aktien/" + this.fallbackSymbol + "/prime/teccharts/" + this.symbol + "/";
   }
 
-  get stockchartsUri() {
+  getStockChartsUri(timeSpan) {
     const cfg = "p49015818842"; // "p34461991577";
-    return "https://stockcharts.com/h-sc/ui?p=D&yr=1&mn=0&dy=0&id=" + cfg + "&s=" + this.symbol;
+    
+    let ts = "&yr=9&mn=0&dy=0";
+    if (timeSpan.id === "5M") {
+      ts = "&yr=0&mn=5&dy=0";
+    } else if (timeSpan.id === "2Y") {
+      ts = "&yr=2&mn=0&dy=0";
+    }
+
+    return "https://stockcharts.com/h-sc/ui?p=D" + ts + "&id=" + cfg + "&s=" + this.symbol;
   }
 
   get outlinkUri() {
     let uri = this.finvizUri;
-    if(this.fallbackSymbol != "") {
+    if (this.fallbackSymbol != "") {
       uri = this.aktienPortalUri;
     }
     return uri;
@@ -277,10 +295,10 @@ class Notation {
 
   get analyzeUri() {
     let uri = this.stockchartsUri;
-    if(this.fallbackSymbol != "") {
+    if (this.fallbackSymbol != "") {
       uri = this.aktienPortalUri;
     }
-    return uri;    
+    return uri;
   }
 
   getImgUriOld(timeSpan) {
@@ -554,16 +572,16 @@ function deleteNotation(id) {
 
 
   var notation = getNotation(getUriParam("id"));
-  if(notation) {
+  if (notation) {
     var name = getUriParam("name");
-    if(name && name !== "undefined") {
+    if (name && name !== "undefined") {
       notation.name = name;
       setNotation(notation);
     }
 
     $("header h1 a:last-child").text(notation.name);
-    $("header nav ul").append('<li><a href="' + notation.analyzeUri + '" target="_blank">Analyze</a></li>');
-    if(notation.pinned) {
+    //$("header nav ul").append('<li><a href="' + notation.analyzeUri + '" target="_blank">Analyze</a></li>');
+    if (notation.pinned) {
       $("header nav ul").append('<li><a href="' + notation.unpinUri + '">Unpin</a></li>');
     } else {
       $("header nav ul").append('<li><a href="' + notation.pinUri + '">Pin</a></li>');
@@ -572,11 +590,19 @@ function deleteNotation(id) {
     document.title = notation.id.toLowerCase();
 
     var ts = timeSpans;
-    for(var i=0; i<ts.length; i++) {
+    for (var i = 0; i < ts.length; i++) {
       var timeSpan = ts[i];
       var section = $("section:eq(" + i + ")");
 
-      section.find("a").attr("href", notation.outlinkUri);
+      section.find("a").eq(0).attr("href", notation.outlinkUri);
+
+      if (notation.fallbackSymbol != "") {
+        section.find("div").append('<a href="' + notation.aktienPortalUri + '" target="_blank" rel="noreferrer">&#8594; aktienportal</a>');
+      } else {
+        section.find("div").append('<a href="' + notation.getStockChartsUri(timeSpan) + '" target="_blank" rel="noreferrer">&#8594; stockcharts</a>');
+        section.find("div").append('<a href="' + notation.getFinvizUri(timeSpan) + '" target="_blank" rel="noreferrer">&#8594; finviz</a>');
+      }
+
       section.find("h1").text(notation.name + " " + timeSpan.name);
       section.find("span").text(notation.exchange + ":" + notation.symbol);
       section.find("img").attr("src", notation.getImgUri(timeSpan)).attr("alt", notation.name);
@@ -589,7 +615,7 @@ function deleteNotation(id) {
       let amount = 4000;
       let interest = 0.25;
       let sellAt = 123.4;
-      if(cookie) {
+      if (cookie) {
         amount = cookie.amount;
         interest = cookie.interest;
         sellAt = cookie.sellAt;
@@ -611,12 +637,12 @@ function deleteNotation(id) {
       const sellAt = parseFloat($('#sellAt').val());
       const charges = 20.0;
       const kest = 0.275;
-      const reqPerf = interest/(1-kest);
+      const reqPerf = interest / (1 - kest);
 
-      const buyAtEstimate = sellAt * (1.0/(1.0 + reqPerf));
+      const buyAtEstimate = sellAt * (1.0 / (1.0 + reqPerf));
       const countEstimate = Math.ceil(investment / buyAtEstimate);
 
-      const buyAt = (sellAt - charges/countEstimate) * (1.0/(1.0 + reqPerf));
+      const buyAt = (sellAt - charges / countEstimate) * (1.0 / (1.0 + reqPerf));
       const count = Math.ceil(investment / buyAt);
 
       const investmentActual = parseInt(count) * buyAt;
@@ -641,7 +667,6 @@ function deleteNotation(id) {
     $("#sellAt").focus().select();
   }
 </script>
-
 
   <footer>
     <ul>
