--- a/notations/index.html
+++ b/notations/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Notations">
     <link rel="canonical" href="http://notations.incognitek.com/">
-    <style type="text/css">@font-face{font-family:'Dosis';font-style:normal;font-weight:300;src:local("Dosis Light"),local("Dosis-Light"),url(./font/dosis-light.woff2) format("woff2"),url(../font/dosis-light.woff2) format("woff2")}*{box-sizing:border-box;float:inherit;clear:inherit;font-family:"Dosis", sans-serif;font-size:1rem;font-weight:300;text-transform:lowercase;line-height:inherit;padding:0;margin:0;border:none;outline:none;color:#036;background-color:transparent;transition:all 0.0625s ease}body{background-color:#f3f3f3}img{text-indent:-9999px;width:100%}a{text-decoration:none;color:#036}a:hover{text-decoration:underline}a:hover img{-webkit-filter:hue-rotate(-10deg) contrast(110%)}input{border:1px solid #ddd;background-color:white}ul{float:left;clear:none;list-style:none}ul li a{padding:0 1rem}ul li .selected{color:#09f}ul li form{display:block;width:22rem;padding-right:1rem;padding-bottom:1rem}@media (max-width: 850px){ul li form{padding-left:1rem}}ul li form input[type=text]{width:100%;line-height:2rem;margin-top:1rem;padding:0 3%}@media (max-width: 690px){ul li:nth-child(2){clear:left}}header{float:left;clear:both;width:100%;line-height:4rem;background-color:#f3f3f3;border-bottom:1px solid #ddd}header hgroup{clear:none;padding-left:1rem}header hgroup *{float:none}header nav{float:right;clear:none}@media (max-width: 770px){header nav{float:left;clear:both}}footer{float:left;clear:both;width:100%;line-height:4rem;background-color:#f3f3f3;border-top:1px solid #ddd}.calc{float:left;clear:none;width:100%;background-color:white;padding:1rem 1rem 0 1rem}.calc *{float:none;clear:none}.calc input{text-align:center;width:4rem;border:1px solid #ddd;border-radius:2px}.calc input:read-only{background-color:#f3f3f3}#flex{float:left;clear:both;width:100%;background-color:white;display:flex;flex-wrap:wrap;justify-content:space-between;padding-bottom:2rem}#flex:after{content:"";flex:auto}section{flex-grow:0;flex-shrink:0;flex-basis:20%;overflow:hidden;padding:1rem 1rem 0 1rem}section h1{display:inline;line-height:1.5rem}section span{display:inline;font-size:.5rem}section img{margin-top:.25rem}.notation{flex-basis:calc(100% / 5)}@media (max-width: 1750px){.notation{flex-basis:calc(100% / 4)}}@media (max-width: 1500px){.notation{flex-basis:calc(100% / 3)}}@media (max-width: 1250px){.notation{flex-basis:calc(100% / 3)}}@media (max-width: 1000px){.notation{flex-basis:calc(100% / 2)}}@media (max-width: 750px){.notation{flex-basis:calc(100% / 2)}}@media (max-width: 500px){.notation{flex-basis:calc(100% / 1)}}@media (max-width: 250px){.notation{flex-basis:calc(100% / 1)}}.highlighted h1:before{content:'* '}.timespan{flex-basis:calc(100% / 3)}@media (max-width: 1750px){.timespan{flex-basis:calc(100% / 3)}}@media (max-width: 1500px){.timespan{flex-basis:calc(100% / 3)}}@media (max-width: 1250px){.timespan{flex-basis:calc(100% / 3)}}@media (max-width: 1000px){.timespan{flex-basis:calc(100% / 2)}}@media (max-width: 750px){.timespan{flex-basis:calc(100% / 2)}}@media (max-width: 500px){.timespan{flex-basis:calc(100% / 1)}}@media (max-width: 250px){.timespan{flex-basis:calc(100% / 1)}}
+    <style type="text/css">@font-face{font-family:'Dosis';font-style:normal;font-weight:300;src:local("Dosis Light"),local("Dosis-Light"),url(./font/dosis-light.woff2) format("woff2"),url(../font/dosis-light.woff2) format("woff2")}*{box-sizing:border-box;float:inherit;clear:inherit;font-family:"Dosis", sans-serif;font-size:1rem;font-weight:300;text-transform:lowercase;line-height:inherit;padding:0;margin:0;border:none;outline:none;color:#036;background-color:transparent;transition:all 0.0625s ease}body{background-color:#f3f3f3}img{text-indent:-9999px;width:100%}a{text-decoration:none;color:#036}a:hover{text-decoration:underline}a:hover img{-webkit-filter:hue-rotate(-10deg) contrast(110%)}input{border:1px solid #ddd;background-color:white}ul{float:left;clear:none;list-style:none}ul li a{padding:0 1rem}ul li .selected{color:#09f}ul li form{display:block;width:22rem;padding-right:1rem;padding-bottom:1rem}@media (max-width: 850px){ul li form{padding-left:1rem}}ul li form input[type=text]{width:100%;line-height:2rem;margin-top:1rem;padding:0 3%}@media (max-width: 690px){ul li:nth-child(2){clear:left}}header{float:left;clear:both;width:100%;line-height:4rem;background-color:#f3f3f3;border-bottom:1px solid #ddd}header hgroup{clear:none;padding-left:1rem}header hgroup *{float:none}header nav{float:right;clear:none}@media (max-width: 770px){header nav{float:left;clear:both}}footer{float:left;clear:both;width:100%;line-height:4rem;background-color:#f3f3f3;border-top:1px solid #ddd}.calc{float:left;clear:none;width:100%;background-color:white;padding:1rem 1rem 0 1rem}.calc *{float:none;clear:none}.calc input{text-align:center;width:4rem;border:1px solid #ddd;border-radius:2px}.calc input:read-only{background-color:#f3f3f3}#flex{float:left;clear:both;width:100%;background-color:white;display:flex;flex-wrap:wrap;justify-content:space-between;padding-bottom:2rem}#flex:after{content:"";flex:auto}section{flex-grow:0;flex-shrink:0;flex-basis:20%;overflow:hidden;padding:1rem 1rem 0 1rem}section h1{display:inline;line-height:1.5rem}section span{display:inline;font-size:.5rem}section img{margin-top:.25rem}.notation{flex-basis:calc(100% / 5)}@media (max-width: 1750px){.notation{flex-basis:calc(100% / 4)}}@media (max-width: 1500px){.notation{flex-basis:calc(100% / 3)}}@media (max-width: 1250px){.notation{flex-basis:calc(100% / 3)}}@media (max-width: 1000px){.notation{flex-basis:calc(100% / 2)}}@media (max-width: 750px){.notation{flex-basis:calc(100% / 2)}}@media (max-width: 500px){.notation{flex-basis:calc(100% / 1)}}@media (max-width: 250px){.notation{flex-basis:calc(100% / 1)}}.highlighted h1:before{content:'* '}.timespan{flex-basis:calc(100% / 3)}@media (max-width: 1750px){.timespan{flex-basis:calc(100% / 3)}}@media (max-width: 1500px){.timespan{flex-basis:calc(100% / 3)}}@media (max-width: 1250px){.timespan{flex-basis:calc(100% / 3)}}@media (max-width: 1000px){.timespan{flex-basis:calc(100% / 2)}}@media (max-width: 750px){.timespan{flex-basis:calc(100% / 2)}}@media (max-width: 500px){.timespan{flex-basis:calc(100% / 1)}}@media (max-width: 250px){.timespan{flex-basis:calc(100% / 1)}}.timespan div{text-align:center;padding-top:1rem}.timespan div a{padding:0 1rem}
 </style>
   </head>
 <body>
@@ -1221,22 +1221,37 @@ class Notation {
     return 'https://www.google.com/finance?q=' + this.id;
   }
 
-  get finvizUri() {
-    return "https://finviz.com/quote.ashx?t=" + this.symbol;
+  getFinvizUri(timeSpan) {
+    let p = "m";
+    if (timeSpan.id === "5M") {
+      p = "d";
+    } else if (timeSpan.id === "2Y") {
+      p = "w";
+    }
+
+    return "https://finviz.com/quote.ashx?t=" + this.symbol + "&ty=c&ta=0&p=" + p;
   }
 
   get aktienPortalUri() {
     return "https://aktien-portal.at/Aktien/" + this.fallbackSymbol + "/prime/teccharts/" + this.symbol + "/";
   }
 
-  get stockchartsUri() {
+  getStockChartsUri(timeSpan) {
     const cfg = "p49015818842"; // "p34461991577";
-    return "https://stockcharts.com/h-sc/ui?p=D&yr=1&mn=0&dy=0&id=" + cfg + "&s=" + this.symbol;
+    
+    let ts = "&yr=9&mn=0&dy=0";
+    if (timeSpan.id === "5M") {
+      ts = "&yr=0&mn=5&dy=0";
+    } else if (timeSpan.id === "2Y") {
+      ts = "&yr=2&mn=0&dy=0";
+    }
+
+    return "https://stockcharts.com/h-sc/ui?p=D" + ts + "&id=" + cfg + "&s=" + this.symbol;
   }
 
   get outlinkUri() {
     let uri = this.finvizUri;
-    if(this.fallbackSymbol != "") {
+    if (this.fallbackSymbol != "") {
       uri = this.aktienPortalUri;
     }
     return uri;
@@ -1244,10 +1259,10 @@ class Notation {
 
   get analyzeUri() {
     let uri = this.stockchartsUri;
-    if(this.fallbackSymbol != "") {
+    if (this.fallbackSymbol != "") {
       uri = this.aktienPortalUri;
     }
-    return uri;    
+    return uri;
   }
 
   getImgUriOld(timeSpan) {
