--- a/notations/details/index.html
+++ b/notations/details/index.html
@@ -476,6 +476,7 @@ var defaults = {
   "NYSE:WWE": { name: "World Wrestling" },
   "NYSE:CAT": { name: "Caterpillar" },
   "NYSE:DE": { name: "John Deere" },
+  "NYSE:DT": { name: "Dynatrace", pinned: true },
 
   "ATX:ANDR:96": { name: "Andritz" },
   "ATX:VOE:19": { name: "Voest" },
@@ -498,25 +499,25 @@ var defaults = {
 
   "NYSE:VT": { name: "ETF World" },
   "NYSEARCA:WDIV": { name: "ETF World Divi" },
-  "AMEX:IDHD": { name: "ETF World Divi" },
+  //"AMEX:IDHD": { name: "ETF World Divi" },
   "NYSE:REET": { name: "ETF World Real Estate" },
 
   "NYSE:SDY": { name: "ETF US Divi" },
   "NYSE:VTI": { name: "ETF US Large Cap" },
-  "NYSE:ITOT": { name: "ETF US Large Cap" },
-  "NYSE:SCHX": { name: "ETF US Large Cap" },
-  "NYSEARCA:NOBL": { name: "ETF US Large Cap" },
-  "NYSEARCA:SPY": { name: "ETF US Large Cap" },
+//  "NYSE:ITOT": { name: "ETF US Large Cap" },
+//  "NYSE:SCHX": { name: "ETF US Large Cap" },
+//  "NYSEARCA:NOBL": { name: "ETF US Large Cap" },
+//  "NYSEARCA:SPY": { name: "ETF US Large Cap" },
   "NYSE:VIG": { name: "ETF US Large Cap Divi" },
-  "NYSEARCA:DVY": { name: "ETF US Large Cap Divi" },
-  "NYSEARCA:HDV": { name: "ETF US Large Cap Divi" },
-  "NYSEARCA:SDY": { name: "ETF US Large Cap Divi" },
-  "NYSE:VYM": { name: "ETF US Large Cap Divi" },
+//  "NYSEARCA:DVY": { name: "ETF US Large Cap Divi" },
+//  "NYSEARCA:HDV": { name: "ETF US Large Cap Divi" },
+//  "NYSEARCA:SDY": { name: "ETF US Large Cap Divi" },
+//  "NYSE:VYM": { name: "ETF US Large Cap Divi" },
   "BATS:REGL": { name: "ETF US Mid Cap Divi" },
   "NYSE:SCHH": { name: "ETF US Real Estate" },
 
   "NYSE:EELV": { name: "ETF Emerging Large Cap" },
-  "NYSE:EEMO": { name: "ETF Emerging Large Cap" },
+//  "NYSE:EEMO": { name: "ETF Emerging Large Cap" },
 
 };
 var metadata = getObject("metadata", defaults);
